@@ -242,7 +242,9 @@ public abstract class GeoIndexSearcher {
                     // final check - top level tiles
                     curGeocells.clear();
                     String[] items = "0123456789abcdef".split( "(?!^)" );
-                    Collections.addAll(curGeocells, items);
+                    for ( String item : items ) {
+                        curGeocells.add( item );
+                    }
                     done = true;
                 }
                 else {
@@ -262,17 +264,17 @@ public abstract class GeoIndexSearcher {
                 // Get adjacent in one direction.
                 // TODO(romannurik): Watch for +/- 90 degree latitude edge case
                 // geocells.
-                for (Tuple<int[], Double> sortedEdgesDistance : sortedEdgesDistances) {
+                for ( int i = 0; i < sortedEdgesDistances.size(); i++ ) {
 
-                    int nearestEdge[] = sortedEdgesDistance.getFirst();
-                    String edge = GeocellUtils.adjacent(curGeocells.get(0), nearestEdge);
+                    int nearestEdge[] = sortedEdgesDistances.get( i ).getFirst();
+                    String edge = GeocellUtils.adjacent( curGeocells.get( 0 ), nearestEdge );
 
                     // we're at the edge of the world, search in a different direction
-                    if (edge == null) {
+                    if ( edge == null ) {
                         continue;
                     }
 
-                    curGeocells.add(edge);
+                    curGeocells.add( edge );
                     break;
                 }
             }
